--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cmd/ginder_cli.go"
+            "program": "${workspaceFolder}/cmd/ginder_cli.go",
+            "args": [
+              "--directory", "C:\\Users\\egagn\\OneDrive\\Documents"
+            ]
         }
     ]
 }
